Bug 1803252 - set playback rate and default playback rate together. r=jolin

We had a workaround [1] to keep the playback correct after pausing and
seeking, because the media engine would incorrectly reset the playback
rate to 1.

Because of this workaround, whenever the playback starts, we would
always change playback rapidly from 1 to another expected rate, which
seems causing intermittent video stuttering because the media engine
might not be able to deal with this rapidly playback rate modification
very well. It also results in video corruption sometime.

After doing some research, I found that the media engine uses another
`default playback rate` [2] to determine the playback after calling
`play()`. And that value is completely independent from the `playback
rate`. Therefore, by setting default playback rate at the same time, we
no longer encounter the situation where the media engine reset our
playback rate, so we don't need to rapidly adjust playback when the
engine starts playing so that we can avoid the stuttering and corruption
issue.

[1] https://searchfox.org/mozilla-central/rev/670e2e0999f04dc7734c8c12b2c3d420a1e31f12/dom/media/ipc/MFMediaEngineParent.cpp#412-419
[2] https://learn.microsoft.com/en-us/windows/win32/api/mfmediaengine/nf-mfmediaengine-imfmediaengine-getdefaultplaybackrate

Differential Revision: https://phabricator.services.mozilla.com/D163408